20240421
* add css blend mode control
* internals: pass all node.style properties from ykv/awareness to reactflow renderer

20240422
* support diverse sound file types: embedded ffmpeg transcodes to mp3 before upload
* add changelog